--- a/public/style.css
+++ b/public/style.css
@@ -94,6 +94,35 @@ audio {
   line-height: 1.5em;
 }
 
+#ellipsis {
+  position: absolute;
+  bottom: 20px;
+  text-align: center;
+  width: 100vw;
+}
+
+#ellipsis:after {
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: bottom;
+  -webkit-animation: ellipsis steps(4,end) 900ms infinite;
+  animation: ellipsis steps(4,end) 900ms infinite;
+  content: "\2026"; /* ascii code for the ellipsis character */
+  width: 0px;
+}
+
+@keyframes ellipsis {
+  to {
+    width: 1.25em;
+  }
+}
+
+@-webkit-keyframes ellipsis {
+  to {
+    width: 1.25em;
+  }
+}
+
 #playing{
   height: 100vh;
 }
